# masterblog_api

./: pyproject.toml
backend/: backend_app.py  blog_logic.py  logger.py
backend/database/: posts.json
