[tool.poetry]
name = "masterblog-api"
version = "0.1.0"
description = ""
authors = ["MightContainNuts <mightcontainnuts@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-cors = "^5.0.0"
logging = "^0.4.9.6"
logging-config = "^1.0.4"
flask-limiter = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
